tdf#149775 - VBA: Find should stay around.

Previously we would create and destroy it for each set of a
property on it making it useless. VBA Find object oddly
represents the Find dialog in Word. Add it to SwDoc.

Change-Id: Id9850cbd2296b24f9c93dc99b2967095bd84921f
Signed-off-by: Hannah Meeks <hmeeks4135@gmail.com>